Bug 154740 - Assert: Changing Paper tray property
Summary: Assert: Changing Paper tray property
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.6.0
Keywords: haveBacktrace, regression
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2023-04-10 08:18 UTC by Xisco Faulí
Modified: 2023-04-19 14:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (13.74 KB, text/plain)
2023-04-10 08:43 UTC, Julien Nabet
Details
bt with gen rendering (15.18 KB, text/plain)
2023-04-10 08:45 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-04-10 08:18:31 UTC
Steps to reproduce:
1. Open Impress
2. Slide - Slide properties
3. Click on paper tray dropdown menu

-> Assertion `m_xComboBox->IsUpdateMode() && "don't set_active when frozen, set_active after thaw. Note selection doesn't " "survive a " "freeze"' failed.
Unspecified Application Error
Comment 1 Xisco Faulí 2023-04-10 08:19:41 UTC
The assert was added in

author	Caolán McNamara <caolanm@redhat.com>	2023-01-10 10:42:26 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2023-01-10 19:57:17 +0000
commit 2ee09316dcd09caf5dd13894de484804d3464172 (patch)
tree d3e95951f99200d56eb6b06a0a975bdf3587f274
parent 13810281fe1297833a849bf5adea0be8ea77ca88 (diff)
Related: tdf#152950 assert if this arises anywhere else

@Caolán, I thought you might be interested in this issue
Comment 2 Julien Nabet 2023-04-10 08:43:11 UTC
Created attachment 186560 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.

Remark: I had to use https://gerrit.libreoffice.org/c/core/+/150175 to test this.
Comment 3 Julien Nabet 2023-04-10 08:45:43 UTC
Created attachment 186561 [details]
bt with gen rendering
Comment 4 Julien Nabet 2023-04-10 08:53:05 UTC
Caolán was very explicit in the assertion message :-)
I've submitted this one:
https://gerrit.libreoffice.org/c/core/+/150176
(it works for gen and gtk3 rendering).
Comment 5 Commit Notification 2023-04-10 09:40:24 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ccfd0c68611f2c28dabaab5ce485d1518b6438ec

tdf#154740: Assert: Changing Paper tray property

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.