tdf#154740: Assert: Changing Paper tray property

Related to tdf#152950: Calc sort crashes after changing from default language to a different one

In brief "don't set_active while frozen"

bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=186560
5  0x00007f9a75653df2 in __GI___assert_fail
    (assertion=0x7f9a6393ad87 "gtk_tree_view_get_model(m_pTreeView) && \"don't set_active when frozen, set_active after thaw. Note selection doesn't survive a freeze\"", file=0x7f9a639265f6 "/home/julien/lo/libreoffice/vcl/unx/gtk3/gtkinst.cxx", line=21759, function=0x7f9a63936b44 "void (anonymous namespace)::GtkInstanceComboBox::set_active_including_mru(int, bool)") at ./assert/assert.c:101
6  0x00007f9a63b026fa in (anonymous namespace)::GtkInstanceComboBox::set_active_including_mru(int, bool) (this=0x562278124580, pos=0, bInteractive=false)
    at /home/julien/lo/libreoffice/vcl/unx/gtk3/gtkinst.cxx:21759
7  0x00007f9a63af904c in (anonymous namespace)::GtkInstanceComboBox::set_active(int) (this=0x562278124580, pos=0) at /home/julien/lo/libreoffice/vcl/unx/gtk3/gtkinst.cxx:22173
8  0x00007f9a357153ee in weld::ComboBox::set_active_text(rtl::OUString const&) (this=0x5622781249d8, rStr="[D'après les paramètres de l'imprimante]") at include/vcl/weld.hxx:786
9  0x00007f9a35ad761f in SvxPageDescPage::PaperBinHdl_Impl(weld::Widget&) (this=0x5622774108e0) at /home/julien/lo/libreoffice/cui/source/tabpages/page.cxx:924

Change-Id: Ib13c3e8e472fdcc8f285993f39a69775537bb238
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150176
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>